2008-05-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/modules/Makefile.am: Linker error fix

2008-05-14  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (process_module): just print
	one warning when some module couldn't be loaded.

2008-05-14  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c: get mimetype.
	* src/tracker-indexer/modules/Makefile.am: make files module link to
	the necessary libraries.

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c:
	* src/libtracker-common/tracker-language.[ch]:
	* src/trackerd/tracker-dbus-search.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-query-tree.c: Use a GObject for
	TrackerLanguage so we can keep reference counts on it. It is
	becoming increasingly used now.

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-query-tree.c: (tracker_query_tree_new):
	Make sure we set the "query" after setting the "config" and
	"language" properties since they are required in the _set_query()
	function. This fixes several warnings to the console.

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-email.[ch]: Fix crash where we wouldn't
	pass TrackerConfig to the _init() function of email modules and it
	would return due to TRACKER_IS_CONFIG() failing on a NULL pointer.

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.h:
	* src/trackerd/tracker-process-files.c: Moved the indexer time
	taken information from the Tracker struct to the process-files
	module. This information is not used publically.

2008-05-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged xesam-support to indexer-split
	->  svn merge -r 1398:1423 ../xesam-support

2008-05-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db-sqlite.[ch]: Removed unused functions.

	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-modest.c: